[metadata]
name = yacho-prj
version = attr: yacho.__version__
description = yacho-prj front page for cloud run
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
    flask
    click

[options.entry_points]
console_scripts =
    yacho-web = yacho.main:main
